--- a/web_demo/app/templates/index.html
+++ b/web_demo/app/templates/index.html
@@ -3,11 +3,14 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Chatty</title>
+  <title>와인 추천 챗봇</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="shortcut icon" href="#" />
+  <script type="text/javascript" nonce="7b651cbe0d9b4b979ae6b4136c0" src="//local.adguard.org?ts=1651473121615&amp;type=content-script&amp;dmn=colab.research.google.com&amp;pth=%2Ftun%2Fm%2Fgpu-t4-hm-2qysn0ntrssg8%2Ffiles%2Fcontent%2Fdrive%2FMyDrive%2FColab_Notebooks%2F2nd_project%2Fweb_demo%2Fapp%2Ftemplates%2Findex.html%3Fauthuser%3D0&amp;app=chrome.exe&amp;css=3&amp;js=1&amp;rel=1&amp;rji=1&amp;sbe=1"></script>
+<script type="text/javascript" nonce="7b651cbe0d9b4b979ae6b4136c0" src="//local.adguard.org?ts=1651473121615&amp;name=AdGuard%20Extra&amp;type=user-script"></script><script type="text/javascript" nonce="7b651cbe0d9b4b979ae6b4136c0" src="//local.adguard.org?ts=1651473121615&amp;type=content-script&amp;dmn=colab.research.google.com&amp;pth=%2Ftun%2Fm%2Fgpu-t4-hm-2qysn0ntrssg8%2Ffiles%2Fcontent%2Fdrive%2FMyDrive%2FColab_Notebooks%2F2nd_project%2Fweb_demo%2Fapp%2Ftemplates%2Findex.html%3Fauthuser%3D0&amp;app=chrome.exe&amp;css=3&amp;js=1&amp;rel=1&amp;rji=1&amp;sbe=1"></script>
+<script type="text/javascript" nonce="7b651cbe0d9b4b979ae6b4136c0" src="//local.adguard.org?ts=1651473121615&amp;name=AdGuard%20Extra&amp;type=user-script"></script><script type="text/javascript" nonce="7b651cbe0d9b4b979ae6b4136c0" src="//local.adguard.org?ts=1651473121615&amp;type=content-script&amp;dmn=colab.research.google.com&amp;pth=%2Ftun%2Fm%2Fgpu-t4-hm-2qysn0ntrssg8%2Ffiles%2Fcontent%2Fdrive%2FMyDrive%2FColab_Notebooks%2F2nd_project%2Fweb_demo%2Fapp%2Ftemplates%2Findex.html%3Fauthuser%3D0&amp;app=chrome.exe&amp;css=3&amp;js=1&amp;rel=1&amp;rji=1&amp;sbe=1"></script>
+<script type="text/javascript" nonce="7b651cbe0d9b4b979ae6b4136c0" src="//local.adguard.org?ts=1651473121615&amp;name=AdGuard%20Extra&amp;type=user-script"></script><link rel="shortcut icon" href="#" />
   <link rel="stylesheet" href="{{ url_for('static', filename='styles/style.css') }}">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 </head>
@@ -17,23 +20,34 @@
   <section class="msger">
     <header class="msger-header">
       <div class="msger-header-title">
-        </i> Chatbot </i>
+        </i> <b>와인 추천 챗봇</b> </i>
       </div>
     </header>
 
     <main class="msger-chat">
       <div class="msg left-msg">
-        <div class="msg-img" style="background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQT1EOmU-ONXYsJ2Wx606U-BoZFlRglikwhOJ_sutucAEceRQ2qiZLgF5pVNqr-VBbxeRg&usqp=CAU)"></div>
+        <!-- ================= TODO : 챗봇의 프로필 사진 넣기 =================== -->
+        <div class="msg-img" style="background-image: url(https://cdn-icons-png.flaticon.com/512/1432/1432235.png)"></div>
+        <!-- ================================================================ -->
         <div class="msg-bubble">
           <div class="msg-info">
-            <div class="msg-info-name">Chatbot</div>
+            <div class="msg-info-name">와인추천봇</div>
             <div class="msg-info-time"></div>
           </div>
           <div class="msg-text">
             안녕하세요. 와인 추천 챗봇입니다.
           </div>
-          <!-- <div class="msg-text">어떤 와인으로 추천드릴까요?</div> -->
         </div>
+        <!-- msg-bubble div 하나 당 말풍선 하나 -->
+<!--         <div class="msg-bubble">
+          <div class="msg-info">
+            <div class="msg-info-name">와인추천봇</div>
+            <div class="msg-info-time"></div>
+          </div>
+          <div class="msg-text">
+            어떤 와인으로 추천드릴까요?
+          </div>
+        </div> -->
       </div>
 
     </main>
@@ -53,9 +67,10 @@
 
 
     // Icons made by Freepik from www.flaticon.com
-    const BOT_IMG = "https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQT1EOmU-ONXYsJ2Wx606U-BoZFlRglikwhOJ_sutucAEceRQ2qiZLgF5pVNqr-VBbxeRg&usqp=CAU";
-    const PERSON_IMG = "https://www.pngitem.com/pimgs/m/334-3344170_user-vector-user-flat-png-transparent-png.png";
-    const BOT_NAME = "ChattyBot";
+    // TODO : 챗봇(27번째 라인과 동일하게 설정하기)과 사용자의 프로필 사진 넣기
+    const BOT_IMG = "https://cdn-icons-png.flaticon.com/512/1432/1432235.png";
+    const PERSON_IMG = "https://cdn-icons-png.flaticon.com/512/265/265674.png";
+    const BOT_NAME = "와인추천봇";
     const PERSON_NAME = "You";
 
     msgerForm.addEventListener("submit", event => {
@@ -90,15 +105,63 @@
       msgerChat.scrollTop += 500;
     }
 
-    function botResponse(rawText) {
+    function appendImage(name, img, side, text, url, page_url) {
+      //   Simple solution for small apps
+      const msgHTML = `
+<div class="msg ${side}-msg">
+  <div class="msg-img" style="background-image: url(${img})"></div>
+  <div class="msg-bubble">
+    <div class="msg-info">
+      <div class="msg-info-name">${name}</div>
+      <div class="msg-info-time">${formatDate(new Date())}</div>
+    </div>
+    <div class="msg-text"><img style="object-fit: scale-down; max-width: 400px;" src="${url}"></div>
+  </div>
+</div>
+<div class="msg ${side}-msg">
+  <div class="msg-img" style="background-image: url(${img})"></div>
+  <div class="msg-bubble">
+    <div class="msg-info">
+      <div class="msg-info-name">${name}</div>
+      <div class="msg-info-time">${formatDate(new Date())}</div>
+    </div>
+    <div class="msg-text">${text}</div>
+  </div>
+</div>
+<div class="msg ${side}-msg">
+  <div class="msg-img" style="background-image: url(${img})"></div>
+  <div class="msg-bubble">
+    <div class="msg-info">
+      <div class="msg-info-name">${name}</div>
+      <div class="msg-info-time">${formatDate(new Date())}</div>
+    </div>
+    <div class="msg-text"><a href=${page_url} target='_blank'>이동하기</a></div>
+  </div>
+</div>
 
+
+`;
+
+      msgerChat.insertAdjacentHTML("beforeend", msgHTML);
+      msgerChat.scrollTop += 500;
+    }
+
+    function botResponse(rawText) {
       // Bot Response
       $.get("/get", { msg: rawText }).done(function (data) {
         console.log(rawText);
         console.log(data);
         const msgText = data;
-        appendMessage(BOT_NAME, BOT_IMG, "left", msgText);
 
+        if (msgText.startsWith("추천드릴")) {
+          var msgList = msgText.split('%$,');
+          var msg = msgList[0];
+          var img = msgList[1];
+          var page = msgList[2];
+          appendImage(BOT_NAME, BOT_IMG, "left", msg, img, page);
+        } else {
+          appendMessage(BOT_NAME, BOT_IMG, "left", msgText);
+        }
       });
 
     }
