--- a/web_demo/app/static/styles/style.css
+++ b/web_demo/app/static/styles/style.css
@@ -1,12 +1,9 @@
 :root {
-    /*======================= TODO =======================*/
-    /* 요소 색상 변경 (변수 설정) */
     --body-bg: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%);
     --msger-bg: #fff;
     --border: 2px solid #ddd;
     --left-msg-bg: #fff1f0;
     --right-msg-bg: #ffc0cb;
-    /*====================================================*/
   }
   
   html {
@@ -51,19 +48,16 @@
     padding: 10px;
     text-align: center;
     border-bottom: var(--border);
-    background: #d42edf;
-    color: #f6e6a8;
+    background: #ad125b;
+    color: #ffffff;
   }
   
   .msger-chat {
     flex: 1;
     overflow-y: auto;
     padding: 10px;
-    /*======================= TODO =======================*/
-    /* 배경화면 설정 */
     background-image: url('https://hips.hearstapps.com/hmg-prod.s3.amazonaws.com/images/red-wine-benefits-1592243220.jpg');
     background-size: cover;
-    /*====================================================*/
   }
   .msger-chat::-webkit-scrollbar {
     width: 6px;
@@ -142,22 +136,18 @@
     flex: 1;
     background: #ddd;
   }
-  /*======================= TODO =======================*/
-  /* 버튼 색상 변경 */
   .msger-send-btn {
     margin-left: 10px;
-    background: #f0657e;
+    background: #ad125b;
     color: #fff;
     font-weight: bold;
     cursor: pointer;
     transition: background 0.23s;
   }
 
-  /*마우스 커서를 버튼에 올렸을 때 바뀌는 색상 변경*/
   .msger-send-btn:hover {
-    background: rgb(0, 180, 50);
+    background: #fae48b;
   }
-  /*====================================================*/  
 
   .msger-chat {
     background-color: #fcfcfe;
